# fastapi-validation-i18n

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  example.json  pyproject.toml
.github/workflows/: checker.yml  publish.yml
example/: main.py
example/locale/en-US/: message.json
example/locale/ja-JP/: message.json
examples/: auto_detection_demo.py  main.py
examples/locale/en-US/: message.json
examples/locale/ja-JP/: message.json
examples/locale/zh-TW/: message.json
fastapi_validation_i18n/: __init__.py  _helpers.py  base.py  compat.py  handler.py  middleware.py  translator.py
fastapi_validation_i18n/locales/ja-JP/: message.json
fastapi_validation_i18n/locales/zh-TW/: message.json
fastapi_validation_i18n/scripts/: publish.py
tests/: test_auto_detection.py  test_messages.py  test_translation.py
tests/locale/en-US/: message.json
tests/locale/zh-TW/: message.json
