[build-system]
requires = ["hatchling >= 1.13.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "fastapi_validation_i18n/__init__.py"

[project]
name = "fastapi_validation_i18n"
description = "FastAPI request validation with i18n error message"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "whchi", email = "whccchi@gmail.com" },
]
dependencies = [
    "fastapi<0.100.0",
    "pydantic>=1.10, <2.0",
]
dynamic = ["version"]
keywords = [
    'fastapi',
    'pydantic',
    'validation',
    'i18n',
]
[project.urls]
Repository = "https://github.com/whchi/fastapi-validation-i18n"
[project.scripts]
publish-locale = 'fastapi_validation_i18n.scripts.publish:main'

[tool.poetry]
name = "fastapi_validation_i18n"
authors = ["whc <whccchi@gmail.com>"]
license = "MIT"
packages = [{include = "fastapi_validation_i18n"}]
description = ""
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.99"
pydantic = "^1.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.284"
yapf = "^0.40.1"
uvicorn = "^0.23.2"
mypy = "^1.5.0"
pytest = "^7.4.0"

[tool.mypy]
strict = true

[tool.yapf]
column_limit = 88
based_on_style = "google"
split_before_logical_operator = true
split_before_arithmetic_operator = true # flake8 W504

[tool.ruff]
line-length = 88
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501",
    "B008",
    "E402",
    "E226",
    "B904",
    "B030",
    "B006"
]
extend-exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "__init__.py",
    "frontend",
]
[tool.ruff.isort]
force-single-line = false
force-sort-within-sections = true
known-third-party = ["fastapi", "pydantic", "starlette"]
single-line-exclusions = ["typing"]
order-by-type = false
[tool.ruff.mccabe]
max-complexity = 10
[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.pytest.ini_options]
addopts = """
  -ra
  -q
  --strict-markers
"""

testpaths = [
  "tests"
]

log_format = "%(asctime)s (%(filename)-16s:%(lineno)-3s) %(levelname)-8s %(message)s"
log_date_format = "%Y-%M-%D %H:%M:%S"


[tool.poetry.scripts]
publish-locale = 'fastapi_validation_i18n.scripts.publish:main'
